# Makefile.am -- Documentation automake configuration file
#
# Copyright (C) 2009, 2013 Embecosm Limited
#
# Contributor Jeremy Bennett <jeremy.bennett@embecosm.com>
#
# This file is part of BEEBS
#
# SPDX-License-Identifier: GPL-3.0-or-later


info_TEXINFOS = beebs.texi

# Included files in the texinfo source
beebs_TEXINFOS = config.texi  \
	         fdl-1.2.texi \
		 version.texi
