# Makefile.am for BEEBS benchmark source tree
#
# Copyright (C) 2018 Embecosm Limited
#
# Contributor: Jeremy Bennett <jeremy.bennett@embecosm.com>
#
# This file is part of the Bristol/Embecosm Embedded Benchmark Suite.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# Remember that ctl, matmult, sglib-arraysort and trio are not benchmarks
# themselves, but the frameworks from which others are created, so their
# subdirs are only for generating the distribution files

SUBDIRS = aha-mont64            \
          crc32                 \
          cubic                 \
          edn                   \
          janne_complex         \
          matmult-int           \
          minver                \
          nbody                 \
          nettle-aes            \
          nettle-sha256         \
          nsichneu              \
          picojpeg              \
          qrduino               \
          sglib-arrayquicksort  \
          sglib-dllist          \
          sglib-hashtable       \
          sglib-queue           \
          sglib-rbtree          \
          slre                  \
          st                    \
          statemate             \
          tarai                 \
          ud                    \
          wikisort

EXTRA_DIST = common.mk.am
